--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -1,6 +1,6 @@
 .backgroundd{
     background-color: rgba(0, 0, 0, 0.932);
-    height: 1510px;
+    height: 2010px;
 }
 .navv{
     height: 90px;
@@ -36,7 +36,7 @@
 
 .bannerimg{
     width: 100%;
-    height: 300px;
+    height: 350px;
     padding: 30px;
     border-radius: 30px;
     opacity: 0.5;
@@ -45,14 +45,15 @@
 .moviecard{
     margin-top: 30px;
     margin-left: 70px;
-    height: 300px;
+    height: 370px;
+    border: none;
 }
 .cardalign{
     display: flex;
 }
 
 .cardimg{
-    height: 300px;
+    height: 370px;
 }
 .textcolourr{
     color: white;
